--- a/fms-gui-server/package.json
+++ b/fms-gui-server/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thomas Khlebovitch",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "js-yaml": "latest"
+  }
 }
