FMS Server - Add a directory watcher (if file was added or changed) to the project

--- a/fms-gui-server/package.json
+++ b/fms-gui-server/package.json
@@ -9,6 +9,7 @@
   "author": "Thomas Khlebovitch",
   "license": "ISC",
   "dependencies": {
+    "chokidar": "^2.0.4",
     "js-yaml": "latest"
   }
 }
