--- a/fms-gui-client/.gitignore
+++ b/fms-gui-client/.gitignore
@@ -1,4 +1,24 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+###################
+### Environment ###
+###################
+
+### PDF-Files ###
+*.pdf
+
+### Log-Files ###
+log/
+
+### Database-Files ###
+/database/
+/server/database/
+*.mv.db
+
+### Java ###
+*.class
+*.jar
+*.war
+*.ear
+hs_err_pid*
 
 # compiled output
 /dist
@@ -8,13 +28,74 @@
 # dependencies
 /node_modules
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
+###################
+### Build-Tools ###
+###################
+
+### Gradle ###
+.gradle
+build/
+gradle-app.setting
+!gradle-wrapper.jar
+.gradletasknamecache
+
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+!maven-wrapper.jar
+
+############
+### IDEs ###
+############
+
+### Intellij ###
+.idea/
+.idea_modules/
+*.iws
+out/
+*.iml
+
+### Eclipse ###
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
 .settings/
+.loadpath
+.recommenders
+.project
+.externalToolBuilders/
+*.launch
+.classpath
+.factorypath
+.buildpath
+.target
+.tern-project
+.springBeans
+.recommenders/
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+.nb-gradle/
+
+# IDEs and editors
+.c9/
 *.sublime-workspace
 
 # IDE - VSCode
@@ -34,6 +115,39 @@ yarn-error.log
 testem.log
 /typings
 
-# System Files
-.DS_Store
+#########################
+### Operating Systems ###
+#########################
+
+### Windows ###
 Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.lnk
+
+### Linux ###
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+
+### OSX ###
+*.DS_Store
+.AppleDouble
+.LSOverride
+# Thumbnails
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+Icon
