--- a/fms-gui-client/angular.json
+++ b/fms-gui-client/angular.json
@@ -27,12 +27,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/hammerjs/hammer.min.js"
             ]
           },
           "configurations": {
