--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -11,22 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.4",
-    "@angular/cdk": "^7.1.1",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
-    "@angular/material": "^7.1.1",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/router": "~7.0.0",
-    "core-js": "^2.5.4",
-    "hammerjs": "^2.0.8",
-    "jquery": "^3.3.1",
-    "rxjs": "^6.3.3",
-    "zone.js": "~0.8.26"
+    "rxjs": "6.3.3",
+    "moment": "2.22.2",
+    "core-js": "2.6.0",
+    "jquery": "3.3.1",
+    "hammerjs": "2.0.8",
+    "web-animations-js": "2.3.1",
+    "zone.js": "0.8.26",
+    "@angular/animations": "7.1.2",
+    "@angular/cdk": "7.1.1",
+    "@angular/common": "7.1.2",
+    "@angular/compiler": "7.1.2",
+    "@angular/core": "7.1.2",
+    "@angular/forms": "7.1.2",
+    "@angular/http": "7.1.2",
+    "@angular/material": "7.1.1",
+    "@angular/platform-browser": "7.1.2",
+    "@angular/platform-browser-dynamic": "7.1.2",
+    "@angular/router": "7.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
@@ -47,6 +49,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "3.1.1"
   }
 }
