--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -11,13 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "rxjs": "6.3.3",
-    "moment": "2.22.2",
-    "core-js": "2.6.0",
-    "jquery": "3.3.1",
-    "hammerjs": "2.0.8",
-    "web-animations-js": "2.3.1",
-    "zone.js": "0.8.26",
     "@angular/animations": "7.1.2",
     "@angular/cdk": "7.1.1",
     "@angular/common": "7.1.2",
@@ -28,7 +21,15 @@
     "@angular/material": "7.1.1",
     "@angular/platform-browser": "7.1.2",
     "@angular/platform-browser-dynamic": "7.1.2",
-    "@angular/router": "7.1.2"
+    "@angular/router": "7.1.2",
+    "bootstrap": "^4.2.1",
+    "core-js": "2.6.0",
+    "hammerjs": "2.0.8",
+    "jquery": "3.3.1",
+    "moment": "2.22.2",
+    "rxjs": "6.3.3",
+    "web-animations-js": "2.3.1",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
