--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "7.1.2",
     "@angular/platform-browser-dynamic": "7.1.2",
     "@angular/router": "7.1.2",
+    "angular-schema-form": "^0.8.13",
     "bootstrap": "^4.2.1",
     "core-js": "2.6.0",
     "hammerjs": "2.0.8",
