--- a/fms-gui-server/package.json
+++ b/fms-gui-server/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "chokidar": "^2.0.4",
-    "js-yaml": "latest"
+    "js-yaml": "latest",
+    "jquery": "^3.3.1",
+    "bootstrap": "^4.3.1",
+    "sockjs": "^0.3.19"
   }
 }
