--- a/fms-gui-server/package.json
+++ b/fms-gui-server/package.json
@@ -2,17 +2,36 @@
   "name": "fms-gui-server",
   "version": "1.0.0",
   "description": "Server side for the fms-gui-web",
-  "main": "app.js",
+  "main": "src/server.ts",
   "scripts": {
+    "start-server": "ts-node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thomas Khlebovitch",
   "license": "ISC",
   "dependencies": {
-    "chokidar": "^2.0.4",
-    "js-yaml": "latest",
-    "jquery": "^3.3.1",
+    "@types/node": "^11.13.4",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
-    "sockjs": "^0.3.19"
+    "chokidar": "^2.0.4",
+    "express": "^4.16.4",
+    "express-ws": "^4.0.0",
+    "cors": "^2.8.5",
+    "jquery": "^3.3.1",
+    "js-yaml": "latest",
+    "lodash": "^4.17.11",
+    "node": "^11.13.0",
+    "sockjs": "^0.3.19",
+    "tslint": "^5.15.0",
+    "jsonwebtoken": "^8.5.1",
+    "https": "^1.0.0",
+    "uuid": "^3.3.2"
+  },
+  "keywords": [],
+  "devDependencies": {
+    "@types/express": "^4.16.1",
+    "@types/cors": "^2.8.4",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.3"
   }
 }
