--- a/fms-gui-server/package.json
+++ b/fms-gui-server/package.json
@@ -10,7 +10,6 @@
   "author": "Thomas Khlebovitch",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^11.13.4",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "chokidar": "^2.0.4",
@@ -29,8 +28,13 @@
   },
   "keywords": [],
   "devDependencies": {
-    "@types/express": "^4.16.1",
     "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.1",
+    "@types/node": "^11.13.5",
+    "@types/ws": "^6.0.1",
+    "fs": "0.0.1-security",
+    "nodemon": "^1.18.11",
+    "rxjs": "^6.4.0",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.3"
   }
