--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -38,9 +38,13 @@
     "@angular/cli": "~7.0.5",
     "@angular/compiler-cli": "^7.2.14",
     "@angular/language-service": "~7.0.0",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "babel-jest": "^24.7.1",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
