--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -44,6 +44,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/jquery": "~3.3.29",
     "babel-jest": "^24.7.1",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
