--- a/fms-gui-server/package.json
+++ b/fms-gui-server/package.json
@@ -16,7 +16,6 @@
     "express": "^4.16.4",
     "express-ws": "^4.0.0",
     "cors": "^2.8.5",
-    "jquery": "^3.3.1",
     "js-yaml": "latest",
     "lodash": "^4.17.11",
     "node": "^11.13.0",
@@ -24,7 +23,8 @@
     "tslint": "^5.15.0",
     "jsonwebtoken": "^8.5.1",
     "https": "^1.0.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "rxjs": "^6.5.1"
   },
   "keywords": [],
   "devDependencies": {
@@ -34,7 +34,6 @@
     "@types/ws": "^6.0.1",
     "fs": "0.0.1-security",
     "nodemon": "^1.18.11",
-    "rxjs": "^6.4.0",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.3"
   }
