--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -27,6 +27,7 @@
     "core-js": "2.6.0",
     "hammerjs": "2.0.8",
     "jquery": "^3.4.0",
+    "material-design-icons": "^3.0.1",
     "moment": "2.22.2",
     "rxjs": "6.3.3",
     "web-animations-js": "2.3.1",
