--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -12,51 +12,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.1.2",
-    "@angular/cdk": "7.1.1",
-    "@angular/common": "7.1.2",
-    "@angular/compiler": "7.1.2",
-    "@angular/core": "7.1.2",
-    "@angular/forms": "7.1.2",
-    "@angular/material": "7.1.1",
-    "@angular/platform-browser": "7.1.2",
-    "@angular/platform-browser-dynamic": "7.1.2",
-    "@angular/router": "7.1.2",
-    "angular-schema-form": "^0.8.13",
-    "bootstrap": "^4.2.1",
-    "core-js": "2.6.0",
+    "@angular/animations": "8.2.2",
+    "@angular/cdk": "8.1.3",
+    "@angular/common": "8.2.2",
+    "@angular/compiler": "8.2.2",
+    "@angular/core": "8.2.2",
+    "@angular/forms": "8.2.2",
+    "@angular/material": "8.1.3",
+    "@angular/platform-browser": "8.2.2",
+    "@angular/platform-browser-dynamic": "8.2.2",
+    "@angular/router": "8.2.2",
+    "angular-schema-form": "0.8.13",
+    "bootstrap": "4.3.1",
+    "core-js": "3.2.1",
     "hammerjs": "2.0.8",
-    "jquery": "^3.4.0",
-    "material-design-icons": "^3.0.1",
+    "jquery": "3.4.1",
+    "material-design-icons": "3.0.1",
     "moment": "2.22.2",
-    "rxjs": "6.3.3",
-    "web-animations-js": "2.3.1",
+    "rxjs": "6.5.2",
+    "typeface-roboto": "0.0.75",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.8",
-    "@angular/cli": "~7.0.5",
-    "@angular/compiler-cli": "^7.2.14",
-    "@angular/language-service": "~7.0.0",
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.3.29",
-    "@types/node": "~8.9.4",
-    "babel-jest": "^24.7.1",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "3.1.1"
+    "@angular-devkit/build-angular": "0.802.2",
+    "@angular/cli": "8.2.2",
+    "@angular/compiler-cli": "8.2.2",
+    "@angular/language-service": "8.2.2",
+    "@babel/core": "7.5.5",
+    "@babel/preset-env": "7.5.5",
+    "@babel/preset-typescript": "7.3.3",
+    "@types/jasmine": "3.4.0",
+    "@types/jasminewd2": "2.0.6",
+    "@types/node": "12.7.2",
+    "babel-jest": "24.9.0",
+    "codelyzer": "5.1.0",
+    "jasmine-core": "3.4.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "4.2.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage-istanbul-reporter": "2.1.0",
+    "karma-jasmine": "1.1.2",
+    "karma-jasmine-html-reporter": "1.4.2",
+    "protractor": "5.4.2",
+    "tslint": "5.11.0",
+    "typescript": "3.5.3"
   }
 }
