--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -25,6 +25,7 @@
     "angular-schema-form": "0.8.13",
     "bootstrap": "4.3.1",
     "core-js": "3.2.1",
+    "d3": "5.10.0",
     "hammerjs": "2.0.8",
     "jquery": "3.4.1",
     "material-design-icons": "3.0.1",
@@ -41,6 +42,7 @@
     "@babel/core": "7.5.5",
     "@babel/preset-env": "7.5.5",
     "@babel/preset-typescript": "7.3.3",
+    "@types/d3": "5.7.2",
     "@types/jasmine": "3.4.0",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "12.7.2",
