--- a/fms-gui-server/package.json
+++ b/fms-gui-server/package.json
@@ -10,21 +10,12 @@
   "author": "Thomas Khlebovitch",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "bootstrap": "^4.3.1",
-    "chokidar": "^2.0.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-ws": "^4.0.0",
-    "https": "^1.0.0",
-    "js-yaml": "latest",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
     "node": "^11.13.0",
     "rxjs": "^6.5.1",
-    "sockjs": "^0.3.19",
-    "tslint": "^5.15.0",
-    "uuid": "^3.3.2"
+    "tslint": "^5.15.0"
   },
   "keywords": [],
   "devDependencies": {
