--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "prod": "ng serve --configuration=production"
+    "prod": "ng build --prod"
   },
   "private": true,
   "dependencies": {
