--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "prod": "ng build --prod"
+    "prod": "ng build --prod",
+    "update": "ng update"
   },
   "private": true,
   "dependencies": {
@@ -35,9 +36,9 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.3",
-    "@angular/cli": "8.2.2",
-    "@angular/compiler-cli": "8.2.2",
+    "@angular-devkit/build-angular": "^0.901.0",
+    "@angular/cli": "^9.1.0",
+    "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "8.2.2",
     "@babel/core": "7.5.5",
     "@babel/preset-env": "7.5.5",
@@ -46,7 +47,7 @@
     "@types/jasmine": "3.4.0",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "12.7.2",
-    "babel-jest": "24.9.0",
+    "babel-jest": "^25.2.4",
     "codelyzer": "5.1.0",
     "jasmine": "^3.4.0",
     "jasmine-core": "3.4.0",
