FMS-C52 Create tabs for "Position" and "Direction" in the "Flight mode" window

--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-client": "npm run start",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
