--- a/fms-gui-server/package.json
+++ b/fms-gui-server/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.ts",
   "scripts": {
     "start": "ts-node .",
+    "start-server": "npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thomas Khlebovitch",
