--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -52,12 +52,13 @@
     "jasmine": "^3.4.0",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.2.0",
+    "karma": "^5.0.2",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.1.0",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.4.2",
     "protractor": "5.4.2",
+    "resize-observer": "^1.0.0",
     "tslint": "5.11.0",
     "typescript": "3.8.2"
   }
