--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -28,7 +28,7 @@
     "bootstrap": "4.3.1",
     "core-js": "3.2.1",
     "d3": "5.10.0",
-    "jquery": "3.4.1",
+    "jquery": "^3.5.1",
     "material-design-icons": "3.0.1",
     "moment": "2.22.2",
     "rxjs": "6.5.4",
@@ -36,7 +36,7 @@
     "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.0",
+    "@angular-devkit/build-angular": "^0.901.8",
     "@angular/cli": "^9.1.0",
     "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "9.1.0",
@@ -57,7 +57,7 @@
     "karma-coverage-istanbul-reporter": "2.1.0",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.4.2",
-    "protractor": "5.4.2",
+    "protractor": "^7.0.0",
     "resize-observer": "^1.0.0",
     "tslint": "5.11.0",
     "typescript": "3.8.2"
