--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -14,16 +14,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.0",
+    "@angular/animations": "10.0.8",
     "@angular/cdk": "9.2.0",
-    "@angular/common": "9.1.0",
-    "@angular/compiler": "9.1.0",
-    "@angular/core": "9.1.0",
-    "@angular/forms": "9.1.0",
+    "@angular/common": "10.0.8",
+    "@angular/compiler": "10.0.8",
+    "@angular/core": "10.0.8",
+    "@angular/forms": "10.0.8",
     "@angular/material": "9.2.0",
-    "@angular/platform-browser": "9.1.0",
-    "@angular/platform-browser-dynamic": "9.1.0",
-    "@angular/router": "9.1.0",
+    "@angular/platform-browser": "10.0.8",
+    "@angular/platform-browser-dynamic": "10.0.8",
+    "@angular/router": "10.0.8",
     "angular-schema-form": "0.8.13",
     "bootstrap": "4.3.1",
     "core-js": "3.2.1",
@@ -36,10 +36,10 @@
     "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.8",
-    "@angular/cli": "^9.1.0",
-    "@angular/compiler-cli": "^9.1.0",
-    "@angular/language-service": "9.1.0",
+    "@angular-devkit/build-angular": "^0.1000.5",
+    "@angular/cli": "^10.0.5",
+    "@angular/compiler-cli": "^10.0.8",
+    "@angular/language-service": "10.0.8",
     "@babel/core": "7.5.5",
     "@babel/preset-env": "7.5.5",
     "@babel/preset-typescript": "7.3.3",
@@ -48,18 +48,18 @@
     "@types/jasminewd2": "2.0.6",
     "@types/node": "12.7.2",
     "babel-jest": "^25.2.4",
-    "codelyzer": "5.1.0",
+    "codelyzer": "^6.0.0",
     "jasmine": "^3.4.0",
-    "jasmine-core": "3.4.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "^5.0.2",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.1.0",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.4.2",
-    "protractor": "^7.0.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "resize-observer": "^1.0.0",
-    "tslint": "5.11.0",
-    "typescript": "3.8.2"
+    "tslint": "~6.1.0",
+    "typescript": "3.9.7"
   }
 }
